Добавлен вывод с Trud Vsem. Возможность асинхронного выполнения некоторых команд